--- a/src/app/pages/folder/folder.page.html
+++ b/src/app/pages/folder/folder.page.html
@@ -3,20 +3,40 @@
     <ion-buttons slot="start">
       <ion-menu-button></ion-menu-button>
     </ion-buttons>
-    <ion-title>{{ folder }}</ion-title>
   </ion-toolbar>
 </ion-header>
 
-<ion-content [fullscreen]="true">
-  <ion-header collapse="condense">
-    <ion-toolbar>
-      <ion-title size="large">{{ folder }}</ion-title>
-    </ion-toolbar>
-  </ion-header>
-
+<ion-content>
   <div id="container">
-    <strong class="capitalize">{{ folder }}</strong>
-    <p>Explore <a target="_blank" rel="noopener noreferrer" href="https://ionicframework.com/docs/components">UI Components</a></p>
-    <ion-button (click)='print()' color="primary">Print 2</ion-button>
+    <section>
+      <header>Boutons</header>
+      <ion-button expand='block' (click)='initBluetooth()'>Init bluetooth 2</ion-button>
+      <ion-button expand='block' (click)='addBluetoothService()' color="primary">Add bluetooth service</ion-button>
+      <ion-button expand='block' (click)='removeService()' color="primary">Remove bluetooth service</ion-button>
+      <ion-button expand='block' (click)='scanForDevices()' color="primary">Scan for devices</ion-button>
+      <ion-button expand='block' (click)='connectedDevices()' color="primary">Connected devices</ion-button>
+    </section>
+    <section>
+      <ion-list lines="full" class="ion-no-margin ion-no-padding">
+        <ion-item>
+          <ion-label position="stacked">Texte à envoyer <ion-text color="danger">*</ion-text></ion-label>
+          <ion-input [(ngModel)]="data.textToSend" placeholder="Texte à envoyer"></ion-input>
+        </ion-item>
+      </ion-list>
+    </section>
+    <section>
+      <div>
+        <div *ngFor="let device of devices; let i = index; trackBy: trackDevices" lines="full">
+          <br><br>
+          <header>{{device.name}} - {{device.address}}</header>
+          <ion-button expand='block' (click)='connectToDevice(device.address)' color="primary">Connect</ion-button>
+          <ion-button expand='block' (click)='displayDeviceServices(device.address)' color="primary">Display services</ion-button>
+          <ion-button expand='block' (click)='writeToDevice(device.address)' color="primary">Write to device</ion-button>
+          <ion-button expand='block' (click)='readDevice(device.address)' color="primary">Read</ion-button>
+          <ion-button expand='block' (click)='displayCharacteristics(device.address)' color="primary">Display characteristics</ion-button>
+          <ion-button expand='block' (click)='subscribeToCharacteristic(device.address)' color="primary">Subscribe To Characteristic</ion-button>
+        </div>
+      </div>
+    </section>
   </div>
 </ion-content>
