--- a/src/app/pages/restaurant/restaurant.page.html
+++ b/src/app/pages/restaurant/restaurant.page.html
@@ -25,12 +25,12 @@
               <ion-button [color]='tables[7].opened ? "dark" : "primary"' (click)='openTable(tables[7])'>7</ion-button>
             </div>
             <div class='space-evenly'>
-              <ion-button>8</ion-button>
-              <ion-button>9</ion-button>
-              <ion-button>10</ion-button>
-              <ion-button class='double'>11</ion-button>
-              <ion-button>12</ion-button>
-              <ion-button>14</ion-button>
+              <ion-button [color]='tables[8].opened ? "dark" : "primary"' (click)='openTable(tables[8])'>8</ion-button>
+              <ion-button [color]='tables[9].opened ? "dark" : "primary"' (click)='openTable(tables[9])'>9</ion-button>
+              <ion-button [color]='tables[10].opened ? "dark" : "primary"' (click)='openTable(tables[10])'>10</ion-button>
+              <ion-button class='double' [color]='tables[11].opened ? "dark" : "primary"' (click)='openTable(tables[11])'>11</ion-button>
+              <ion-button [color]='tables[12].opened ? "dark" : "primary"' (click)='openTable(tables[12])'>12</ion-button>
+              <ion-button [color]='tables[14].opened ? "dark" : "primary"' (click)='openTable(tables[14])'>14</ion-button>
             </div>
           </div>
         </div>
