--- a/src/app/pages/restaurant/restaurant.page.html
+++ b/src/app/pages/restaurant/restaurant.page.html
@@ -12,25 +12,25 @@
       <div class='beach-texture'>
         <div class='beach'>
           <div class='mesa-zero'>
-            <ion-button class='height-100' [color]='tables[0].opened ? "dark" : "primary"' (click)='openTable(tables[0])'>0</ion-button>
+            <ion-button class='height-100' [color]='tables[0].opened ? "dark" : "primary"' (click)='openTable(0)'>0</ion-button>
           </div>
           <div class='flex-1'>
             <div class='top-tables space-evenly'>
-              <ion-button [color]='tables[1].opened ? "dark" : "primary"' (click)='openTable(tables[1])'>1</ion-button>
-              <ion-button [color]='tables[2].opened ? "dark" : "primary"' (click)='openTable(tables[2])'>2</ion-button>
-              <ion-button [color]='tables[3].opened ? "dark" : "primary"' (click)='openTable(tables[3])'>3</ion-button>
-              <ion-button [color]='tables[4].opened ? "dark" : "primary"' (click)='openTable(tables[4])'>4</ion-button>
-              <ion-button [color]='tables[5].opened ? "dark" : "primary"' (click)='openTable(tables[5])'>5</ion-button>
-              <ion-button [color]='tables[6].opened ? "dark" : "primary"' (click)='openTable(tables[6])'>6</ion-button>
-              <ion-button [color]='tables[7].opened ? "dark" : "primary"' (click)='openTable(tables[7])'>7</ion-button>
+              <ion-button [color]='tables[1].opened ? "dark" : "primary"' (click)='openTable(1)'>1</ion-button>
+              <ion-button [color]='tables[2].opened ? "dark" : "primary"' (click)='openTable(2)'>2</ion-button>
+              <ion-button [color]='tables[3].opened ? "dark" : "primary"' (click)='openTable(3)'>3</ion-button>
+              <ion-button [color]='tables[4].opened ? "dark" : "primary"' (click)='openTable(4)'>4</ion-button>
+              <ion-button [color]='tables[5].opened ? "dark" : "primary"' (click)='openTable(5)'>5</ion-button>
+              <ion-button [color]='tables[6].opened ? "dark" : "primary"' (click)='openTable(6)'>6</ion-button>
+              <ion-button [color]='tables[7].opened ? "dark" : "primary"' (click)='openTable(7)'>7</ion-button>
             </div>
             <div class='space-evenly'>
-              <ion-button [color]='tables[8].opened ? "dark" : "primary"' (click)='openTable(tables[8])'>8</ion-button>
-              <ion-button [color]='tables[9].opened ? "dark" : "primary"' (click)='openTable(tables[9])'>9</ion-button>
-              <ion-button [color]='tables[10].opened ? "dark" : "primary"' (click)='openTable(tables[10])'>10</ion-button>
-              <ion-button class='double' [color]='tables[11].opened ? "dark" : "primary"' (click)='openTable(tables[11])'>11</ion-button>
-              <ion-button [color]='tables[12].opened ? "dark" : "primary"' (click)='openTable(tables[12])'>12</ion-button>
-              <ion-button [color]='tables[14].opened ? "dark" : "primary"' (click)='openTable(tables[14])'>14</ion-button>
+              <ion-button [color]='tables[8].opened ? "dark" : "primary"' (click)='openTable(8)'>8</ion-button>
+              <ion-button [color]='tables[9].opened ? "dark" : "primary"' (click)='openTable(9)'>9</ion-button>
+              <ion-button [color]='tables[10].opened ? "dark" : "primary"' (click)='openTable(10)'>10</ion-button>
+              <ion-button class='double' [color]='tables[11].opened ? "dark" : "primary"' (click)='openTable(11)'>11</ion-button>
+              <ion-button [color]='tables[12].opened ? "dark" : "primary"' (click)='openTable(12)'>12</ion-button>
+              <ion-button [color]='tables[13].opened ? "dark" : "primary"' (click)='openTable(13)'>14</ion-button>
             </div>
           </div>
         </div>
@@ -38,21 +38,21 @@
       <div class='inside-texture'>
         <div class='inside'>
           <div class='mesa-zero'>
-            <ion-button class='height-100'>0</ion-button>
+            <ion-button [color]='tables[14].opened ? "dark" : "primary"' (click)='openTable(14)' class='height-100'>0</ion-button>
           </div>
           <div class='flex-1'>
             <div class='top-tables space-evenly'>
-              <ion-button>5</ion-button>
-              <ion-button>6</ion-button>
-              <ion-button>7</ion-button>
-              <ion-button>8</ion-button>
-              <ion-button>9</ion-button>
+              <ion-button [color]='tables[19].opened ? "dark" : "primary"' (click)='openTable(19)'>5</ion-button>
+              <ion-button [color]='tables[20].opened ? "dark" : "primary"' (click)='openTable(20)'>6</ion-button>
+              <ion-button [color]='tables[21].opened ? "dark" : "primary"' (click)='openTable(21)'>7</ion-button>
+              <ion-button [color]='tables[22].opened ? "dark" : "primary"' (click)='openTable(22)'>8</ion-button>
+              <ion-button [color]='tables[23].opened ? "dark" : "primary"' (click)='openTable(23)'>9</ion-button>
             </div>
             <div class='space-evenly'>
-              <ion-button>1</ion-button>
-              <ion-button>2</ion-button>
-              <ion-button>3</ion-button>
-              <ion-button class='double'>4</ion-button>
+              <ion-button [color]='tables[15].opened ? "dark" : "primary"' (click)='openTable(15)'>1</ion-button>
+              <ion-button [color]='tables[16].opened ? "dark" : "primary"' (click)='openTable(16)'>2</ion-button>
+              <ion-button [color]='tables[17].opened ? "dark" : "primary"' (click)='openTable(17)'>3</ion-button>
+              <ion-button [color]='tables[18].opened ? "dark" : "primary"' (click)='openTable(18)' class='double'>4</ion-button>
             </div>
           </div>
         </div>
@@ -67,12 +67,12 @@
       </div>
     </div>
     <div class='extra-tables'>
-      <ion-button>15</ion-button>
-      <ion-button>16</ion-button>
-      <ion-button>17</ion-button>
-      <ion-button>18</ion-button>
-      <ion-button>19</ion-button>
-      <ion-button>20</ion-button>
+      <ion-button [color]='tables[24].opened ? "dark" : "primary"' (click)='openTable(24)'>15</ion-button>
+      <ion-button [color]='tables[25].opened ? "dark" : "primary"' (click)='openTable(25)'>16</ion-button>
+      <ion-button [color]='tables[26].opened ? "dark" : "primary"' (click)='openTable(26)'>17</ion-button>
+      <ion-button [color]='tables[27].opened ? "dark" : "primary"' (click)='openTable(27)'>18</ion-button>
+      <ion-button [color]='tables[28].opened ? "dark" : "primary"' (click)='openTable(28)'>19</ion-button>
+      <ion-button [color]='tables[29].opened ? "dark" : "primary"' (click)='openTable(29)'>20</ion-button>
       <img style='width: 80px;position: absolute;bottom: 4px;' src='../../assets/seb.png' />
     </div>
   </div>
