--- a/src/app/pages/table/table.page.html
+++ b/src/app/pages/table/table.page.html
@@ -1,7 +1,7 @@
 <ion-header id='table-header' *ngIf='table'>
   <ion-toolbar>
     <ion-buttons class='action-buttons'>
-      <ion-button color="primary" fill='solid'>{{table.name}}</ion-button>
+      <ion-button color="primary" fill='solid' (click)='changeTable()'>{{table.name}}</ion-button>
       <ion-button color="light" fill='solid'><ion-icon name="list-outline"></ion-icon></ion-button>
     </ion-buttons>
     <ion-buttons slot="end">
@@ -11,27 +11,28 @@
   </ion-toolbar>
 </ion-header>
 
-<ion-content *ngIf='table'>
+<ion-content *ngIf='table && table.bills[currentBillIndex]'>
   <div id='table'>
     <div class='bill'>
-      <ion-item>
+      <ion-item [color]='table.bills.length > 1 ? "dark" : "light"'>
         <ion-label>Cuenta</ion-label>
-        <ion-select [selectedText]='table.bills[selectedBillIndex].name' cancelText="Cancelar" okText="Ok" interface="alert" [interfaceOptions]='{header: "Cuenta"}' [(ngModel)]='selectedBillIndex' (ionChange)='changingBill()'>
+        <ion-select [selectedText]='table.bills[currentBillIndex].name' cancelText="Cancelar" okText="Ok" interface="alert" [interfaceOptions]='{header: "Cuenta"}' [(ngModel)]='selectedBillIndex' (ionChange)='changingBill()'>
           <ion-select-option *ngFor='let bill of table.bills;let i = index;' [value]='i' [innerHTML]='bill.name'></ion-select-option>
+          <ion-select-option [value]='-1'>Otra cuenta</ion-select-option>
         </ion-select>
         <ion-button fill='clear' (click)='editBillName()'>
           <ion-icon slot='icon-only' name="create-outline"></ion-icon>
         </ion-button>
       </ion-item>
       <ion-list class='articles' lines='full'>
-        <div *ngIf='table.bills[this.selectedBillIndex].newBatch.articles.length'>
+        <div *ngIf='table.bills[this.currentBillIndex].newBatch.articles.length'>
           <ion-item-divider color='medium'>
             <ion-label>
-              {{table.bills[this.selectedBillIndex].newBatch.waiterName}} - {{table.bills[this.selectedBillIndex].newBatch.date}}
+              {{table.bills[this.currentBillIndex].newBatch.waiterName}} - {{table.bills[this.currentBillIndex].newBatch.date}}
             </ion-label>
           </ion-item-divider>
           <ion-button (click)='sendToKitchen()' expand='full' color='success'>Enviar</ion-button>
-          <ion-item *ngFor='let article of table.bills[this.selectedBillIndex].newBatch.articles; let i = index' class='article click-effect' (click)='modifyArticle(table.bills[this.selectedBillIndex].newBatch, i)'>
+          <ion-item *ngFor='let article of table.bills[this.currentBillIndex].newBatch.articles; let i = index' class='article click-effect' (click)='modifyArticle(table.bills[this.currentBillIndex].newBatch, i)'>
             <div class='name'>
               {{menu.articles[article.ami].name}}
               <div *ngFor='let ingredientIndex of article.pii;'>
@@ -53,7 +54,7 @@
             <div class='price'>{{billService.getArticlePrice(article)}}</div>
           </ion-item>
         </div>
-        <div *ngFor='let batch of table.bills[selectedBillIndex].batches;'>
+        <div *ngFor='let batch of table.bills[currentBillIndex].batches;'>
           <ion-item-divider color='tertiary'>
             <ion-label>
               {{batch.waiterName}} - {{batch.date}}
@@ -84,18 +85,18 @@
       </ion-list>
       <ion-list class='taxes' lines='full'>
         <ion-item class='service'>
-          <ion-checkbox slot="start" [(ngModel)]='table.bills[this.selectedBillIndex].service'></ion-checkbox>
-          <ion-label>Servicio <span>{{billService.getService(table.bills[this.selectedBillIndex]) | number}}</span></ion-label>
+          <ion-checkbox slot="start" [(ngModel)]='table.bills[this.currentBillIndex].service'></ion-checkbox>
+          <ion-label>Servicio <span>{{billService.getService(table.bills[this.currentBillIndex]) | number}}</span></ion-label>
         </ion-item>
         <ion-item>
-          <ion-checkbox slot="start" [(ngModel)]='table.bills[this.selectedBillIndex].itbis'></ion-checkbox>
-          <ion-label>ITBIS <span>{{billService.getItbis(table.bills[this.selectedBillIndex]) | number}}</span></ion-label>
+          <ion-checkbox slot="start" [(ngModel)]='table.bills[this.currentBillIndex].itbis'></ion-checkbox>
+          <ion-label>ITBIS <span>{{billService.getItbis(table.bills[this.currentBillIndex]) | number}}</span></ion-label>
         </ion-item>
       </ion-list>
       <ion-list lines='full'>
         <ion-item color='primary' class='total'>
-          <ion-button style='margin-right:10px;'><ion-icon name="trash"></ion-icon></ion-button>
-          <ion-label>TOTAL <span class='nb'>{{billService.getTotal(table.bills[this.selectedBillIndex]) | number}}</span></ion-label>
+          <ion-button (click)='deleteBill()' style='margin-right:10px;'><ion-icon name="trash"></ion-icon></ion-button>
+          <ion-label>TOTAL <span class='nb'>{{billService.getTotal(table.bills[this.currentBillIndex]) | number}}</span></ion-label>
         </ion-item>
       </ion-list>
     </div>
@@ -107,7 +108,7 @@
       </div>
       <div id='articles-list'>
         <ng-container *ngFor='let category of menu.articleCategories;let i = index'>
-          <ion-item-group *ngIf='category.display' id='category-{{i}}'>
+          <ion-item-group *ngIf='category.display' id='shortcut-{{i}}'>
             <ion-item-divider color='medium' class='ion-text-center'>
               <ion-label class='width-100'>{{category.name}}</ion-label>
             </ion-item-divider>
@@ -131,6 +132,8 @@
             </div>
           </ion-item-group>
         </ng-container>
+        <br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br>
+        <br><br><br><br><br><br><br><br><br><br><br><br><br><br>
       </div>
     </div>
   </div>
