--- a/src/app/pages/waiter/waiter-select-food/waiter-select-food.page.html
+++ b/src/app/pages/waiter/waiter-select-food/waiter-select-food.page.html
@@ -2,6 +2,9 @@
   <ion-toolbar> 
     <ion-buttons class='action-buttons'>
       <ion-button color="primary" fill='solid'>{{table.name}}</ion-button>
+      <ion-button fill='clear' (click)='editBillName()'>
+        <ion-icon slot='icon-only' name="create-outline"></ion-icon>
+      </ion-button>
     </ion-buttons>
     <ion-buttons slot="end">
       <ion-button color="primary" fill='solid' class='show-tables' (click)='backButton()'>Mesas</ion-button>
@@ -12,46 +15,80 @@
 <ion-content *ngIf='table'>
   <div id='table'>
     <div class='bill'>
-      <ion-select [selectedText]='table.bills[selectedBillIndex].name' cancelText="Cancelar" okText="Ok" interface="alert" [interfaceOptions]='{header: "Cuenta"}' [(ngModel)]='selectedBillIndex'>
+      <ion-select [class.hasVarious]='table.bills.length > 1' [selectedText]='table.bills[currentBillIndex].name' cancelText="Cancelar" okText="Ok" interface="alert" [interfaceOptions]='{header: "Cuenta"}' [(ngModel)]='selectedBillIndex' (ionChange)='changingBill()'>
         <ion-select-option *ngFor='let bill of table.bills; let i = index' [value]='i'>{{bill.name}}</ion-select-option>
+        <ion-select-option [value]='-1'>Otra cuenta</ion-select-option>
       </ion-select>
       <ion-list class='articles' lines='full'>
-        <ion-item (click)='modifyArticle(i)' *ngFor='let article of table.bills[selectedBillIndex].newBatch.articles; let i = index;' class='article click-effect'>
-          <div class='name'>
-            {{menu.articles[article.ami].name}}
-            <div *ngFor='let ingredientIndex of article.pii;'>
-              + {{menu.ingredients[ingredientIndex].name}}
-            </div>
-            <div *ngFor='let ingredientIndex of article.mii;'>
-              - {{menu.ingredients[ingredientIndex].name}}
-            </div>
-            <div *ngIf='article.half && article.half.ami != null'>
-              <div class='ion-text-center'>---</div>
-              {{menu.articles[article.half.ami].name}}
-              <div *ngFor='let ingredientIndex of article.half.pii;'>
+        <div *ngIf='table.bills[this.currentBillIndex].newBatch.articles.length'>
+          <ion-item-divider color='medium'>
+            <ion-label>
+              {{table.bills[this.currentBillIndex].newBatch.waiterName}} - {{table.bills[this.currentBillIndex].newBatch.date}}
+            </ion-label>
+          </ion-item-divider>
+          <ion-button (click)='sendToServer()' expand='full' color='success'>Enviar</ion-button>
+          <ion-item *ngFor='let article of table.bills[this.currentBillIndex].newBatch.articles; let i = index' class='article click-effect' (click)='modifyArticle(table.bills[this.currentBillIndex].newBatch, i)'>
+            <div class='name'>
+              {{menu.articles[article.ami].name}}
+              <div *ngFor='let ingredientIndex of article.pii;'>
                 + {{menu.ingredients[ingredientIndex].name}}
               </div>
-              <div *ngFor='let ingredientIndex of article.half.mii;'>
+              <div *ngFor='let ingredientIndex of article.mii;'>
                 - {{menu.ingredients[ingredientIndex].name}}
               </div>
+              <div *ngIf='article.half && article.half.ami != null'>
+                Mitad {{menu.articles[article.half.ami].name}}
+                <div *ngFor='let ingredientIndex of article.half.pii;'>
+                  + {{menu.ingredients[ingredientIndex].name}}
+                </div>
+                <div *ngFor='let ingredientIndex of article.half.mii;'>
+                  - {{menu.ingredients[ingredientIndex].name}}
+                </div>
+              </div>
             </div>
-          </div>
-          <!-- <div class='price'>{{article.price}}</div> -->
-        </ion-item>
+          </ion-item>
+        </div>
+        <div *ngFor='let batch of table.bills[currentBillIndex].batches;'>
+          <ion-item-divider color='tertiary'>
+            <ion-label>
+              {{batch.waiterName}} - {{batch.date}}
+            </ion-label>
+          </ion-item-divider>
+          <ion-item *ngFor='let article of batch.articles; let i = index' class='article click-effect'>
+            <div class='name'>
+              {{menu.articles[article.ami].name}}
+              <div *ngFor='let ingredientIndex of article.pii;'>
+                + {{menu.ingredients[ingredientIndex].name}}
+              </div>
+              <div *ngFor='let ingredientIndex of article.mii;'>
+                - {{menu.ingredients[ingredientIndex].name}}
+              </div>
+              <div *ngIf='article.half && article.half.ami != null'>
+                Mitad {{menu.articles[article.half.ami].name}}
+                <div *ngFor='let ingredientIndex of article.half.pii;'>
+                  + {{menu.ingredients[ingredientIndex].name}}
+                </div>
+                <div *ngFor='let ingredientIndex of article.half.mii;'>
+                  - {{menu.ingredients[ingredientIndex].name}}
+                </div>
+              </div>
+            </div>
+          </ion-item>
+        </div>
       </ion-list>
       <ion-list lines='full'>
         <ion-item>
-          <ion-checkbox slot="start" [(ngModel)]='table.bills[selectedBillIndex].service'></ion-checkbox>
-          <ion-label>SE: <span>{{billService.getService(table.bills[selectedBillIndex]) | number}}</span></ion-label>
+          <ion-checkbox slot="start" [(ngModel)]='table.bills[currentBillIndex].service'></ion-checkbox>
+          <ion-label>SE: <span>{{billService.getService(table.bills[currentBillIndex]) | number}}</span></ion-label>
         </ion-item>
         <ion-item>
-          <ion-checkbox slot="start" [(ngModel)]='table.bills[selectedBillIndex].itbis'></ion-checkbox>
-          <ion-label>IT: <span>{{billService.getItbis(table.bills[selectedBillIndex]) | number}}</span></ion-label>
+          <ion-checkbox slot="start" [(ngModel)]='table.bills[currentBillIndex].itbis'></ion-checkbox>
+          <ion-label>IT: <span>{{billService.getItbis(table.bills[currentBillIndex]) | number}}</span></ion-label>
         </ion-item>
       </ion-list>
       <ion-list lines='full'>
-        <ion-item (click)='sendToServer()' color='primary' class='click-effect total'>
-          <ion-label><span class='nb'>{{billService.getTotal(table.bills[selectedBillIndex]) | number}}</span></ion-label>
+        <ion-item (click)='askForBill()' color='primary' class='click-effect total'>
+          <ion-label><span class='nb'>{{billService.getTotal(table.bills[currentBillIndex]) | number}}</span></ion-label>
         </ion-item>
       </ion-list>
     </div>
