--- a/src/app/pages/waiter/waiter-select-food/waiter-select-food.page.scss
+++ b/src/app/pages/waiter/waiter-select-food/waiter-select-food.page.scss
@@ -2,6 +2,14 @@ ion-content {
   --overflow: hidden;
 }
 
+ion-select {
+  background-color: var(--ion-color-light);
+  &.hasVarious {
+    color: white;
+    background-color: var(--ion-color-dark);
+  }
+}
+
 #table-header {
   .action-buttons {
     ion-button {
