--- a/src/app/pages/table/table.page.html
+++ b/src/app/pages/table/table.page.html
@@ -1,38 +1,104 @@
 <ion-header id='table-header' *ngIf='table'>
   <ion-toolbar>
-    <ion-buttons class='action-buttons'>
-      <ion-button color="primary" fill='solid' (click)='changeTable()'>{{table.name}}</ion-button>
-      <ion-button color="light" fill='solid'><ion-icon name="list-outline"></ion-icon></ion-button>
+    <ion-buttons slot="start" *ngIf='selectedBillIndex != -1 && !showingHistory'>
+      <div class='bill-name'>
+        {{table.bills[selectedBillIndex]?.name}}
+        <ion-button fill='clear' color="primary" (click)='selectBill()'>
+          <ion-icon name="documents-outline"></ion-icon>
+        </ion-button>
+      </div>
     </ion-buttons>
+    <ion-title>
+      {{table.name}}
+      <ion-button class='change-table-button' fill='clear' [hidden]='!table.canChangePlace || !table.opened' color="primary" (click)='changeTable()'>
+        <ion-icon slot="icon-only" name="log-out-outline"></ion-icon>
+      </ion-button>
+    </ion-title>
     <ion-buttons slot="end">
+      <ion-button (click)='toggleHistory()' [hidden]='selectedBillIndex == -1 || !table.history.length' color="warning" class='history-button'><ion-icon name="timer"></ion-icon></ion-button>
       <ion-button color="primary" fill='solid' (click)='backButton()' class='show-tables'>Mesas</ion-button>
-      <ion-button color="warning" class='history-button'><ion-icon name="timer"></ion-icon></ion-button>
     </ion-buttons>
   </ion-toolbar>
 </ion-header>
 
-<ion-content *ngIf='table && table.bills[currentBillIndex]'>
+<ion-content *ngIf='selectedBillIndex == -1 || showingHistory'>
+  <div class='condensed-bills'>
+    <ion-card [class.history]='showingHistory' [class.sent]='bill.sent' class='bill click-effect' *ngFor='let bill of condensedBills;let i = index;' (click)='selectBill(i)'>
+      <ion-card-header>
+        <ion-card-title>
+          {{bill.name}}
+          <ion-button [hidden]='showingHistory' style='position: absolute;top: -11px;' fill='clear' color="primary" (click)='renameBill(i);$event.stopPropagation()'>
+            <ion-icon name="create-outline"></ion-icon>
+          </ion-button>
+        </ion-card-title>
+        <ion-button [hidden]='showingHistory' [color]='bill.sent ? "success" : "primary"' style='margin-top:10px;' expand='full' color='success' (click)='closeBill(i);$event.stopPropagation();'>Cerrar</ion-button>
+      </ion-card-header>
+      <ion-list *ngIf='bill.newBatch && bill.newBatch.articles.length' class='articles new-batch' lines='full'>
+        <div>
+          <ion-item *ngFor='let article of bill.newBatch.articles' class='article'>
+            <div class='quantity'>{{ article.q }}</div>
+            <div class='name'>
+              {{menu.articles[article.ami].name}}
+              <div *ngFor='let ingredientIndex of article.pii;'>
+                + {{menu.ingredients[ingredientIndex].name}}
+              </div>
+              <div *ngFor='let ingredientIndex of article.mii;'>
+                - {{menu.ingredients[ingredientIndex].name}}
+              </div>
+              <div *ngIf='article.half && article.half.ami != null'>
+                Mitad {{menu.articles[article.half.ami].name}}
+                <div *ngFor='let ingredientIndex of article.half.pii;'>
+                  + {{menu.ingredients[ingredientIndex].name}}
+                </div>
+                <div *ngFor='let ingredientIndex of article.half.mii;'>
+                  - {{menu.ingredients[ingredientIndex].name}}
+                </div>
+              </div>
+            </div>
+          </ion-item>
+        </div>
+      </ion-list>
+      <ion-list class='articles' lines='full'>
+        <div>
+          <ion-item *ngFor='let article of bill.articles' class='article'>
+            <div class='quantity'>{{ article.q }}</div>
+            <div class='name'>
+              {{menu.articles[article.ami].name}}
+              <div *ngFor='let ingredientIndex of article.pii;'>
+                + {{menu.ingredients[ingredientIndex].name}}
+              </div>
+              <div *ngFor='let ingredientIndex of article.mii;'>
+                - {{menu.ingredients[ingredientIndex].name}}
+              </div>
+              <div *ngIf='article.half && article.half.ami != null'>
+                Mitad {{menu.articles[article.half.ami].name}}
+                <div *ngFor='let ingredientIndex of article.half.pii;'>
+                  + {{menu.ingredients[ingredientIndex].name}}
+                </div>
+                <div *ngFor='let ingredientIndex of article.half.mii;'>
+                  - {{menu.ingredients[ingredientIndex].name}}
+                </div>
+              </div>
+            </div>
+          </ion-item>
+        </div>
+      </ion-list>
+    </ion-card>
+  </div>
+</ion-content>
+
+<ion-content *ngIf='table && table.bills[selectedBillIndex] && !showingHistory'>
   <div id='table'>
     <div class='bill'>
-      <ion-item [color]='table.bills.length > 1 ? "dark" : "light"'>
-        <ion-label>Cuenta</ion-label>
-        <ion-select [selectedText]='table.bills[currentBillIndex].name' cancelText="Cancelar" okText="Ok" interface="alert" [interfaceOptions]='{header: "Cuenta"}' [(ngModel)]='selectedBillIndex' (ionChange)='changingBill()'>
-          <ion-select-option *ngFor='let bill of table.bills;let i = index;' [value]='i' [innerHTML]='bill.name'></ion-select-option>
-          <ion-select-option [value]='-1'>Otra cuenta</ion-select-option>
-        </ion-select>
-        <ion-button fill='clear' (click)='editBillName()'>
-          <ion-icon slot='icon-only' name="create-outline"></ion-icon>
-        </ion-button>
-      </ion-item>
       <ion-list class='articles' lines='full'>
-        <div *ngIf='table.bills[this.currentBillIndex].newBatch.articles.length'>
+        <div *ngIf='table.bills[this.selectedBillIndex].newBatch.articles.length'>
           <ion-item-divider color='medium'>
             <ion-label>
-              {{table.bills[this.currentBillIndex].newBatch.waiterName}} - {{table.bills[this.currentBillIndex].newBatch.date}}
+              {{table.bills[this.selectedBillIndex].newBatch.waiterName}} - {{table.bills[this.selectedBillIndex].newBatch.date}}
             </ion-label>
           </ion-item-divider>
           <ion-button (click)='sendToKitchen()' expand='full' color='success'>Enviar</ion-button>
-          <ion-item *ngFor='let article of table.bills[this.currentBillIndex].newBatch.articles; let i = index' class='article click-effect' (click)='modifyArticle(table.bills[this.currentBillIndex].newBatch, i)'>
+          <ion-item *ngFor='let article of table.bills[this.selectedBillIndex].newBatch.articles; let i = index' class='article click-effect' (click)='modifyArticle(table.bills[this.selectedBillIndex].newBatch, i)'>
             <div class='name'>
               {{menu.articles[article.ami].name}}
               <div *ngFor='let ingredientIndex of article.pii;'>
@@ -54,7 +120,7 @@
             <div class='price'>{{billService.getArticlePrice(article)}}</div>
           </ion-item>
         </div>
-        <div *ngFor='let batch of table.bills[currentBillIndex].batches;'>
+        <div *ngFor='let batch of table.bills[selectedBillIndex].batches;'>
           <ion-item-divider color='tertiary'>
             <ion-label>
               {{batch.waiterName}} - {{batch.date}}
@@ -85,18 +151,18 @@
       </ion-list>
       <ion-list class='taxes' lines='full'>
         <ion-item class='service'>
-          <ion-checkbox slot="start" [(ngModel)]='table.bills[this.currentBillIndex].service'></ion-checkbox>
-          <ion-label>Servicio <span>{{billService.getService(table.bills[this.currentBillIndex]) | number}}</span></ion-label>
+          <ion-checkbox slot="start" [(ngModel)]='table.bills[this.selectedBillIndex].service'></ion-checkbox>
+          <ion-label>Servicio <span>{{billService.getService(table.bills[this.selectedBillIndex]) | number}}</span></ion-label>
         </ion-item>
         <ion-item>
-          <ion-checkbox slot="start" [(ngModel)]='table.bills[this.currentBillIndex].itbis'></ion-checkbox>
-          <ion-label>ITBIS <span>{{billService.getItbis(table.bills[this.currentBillIndex]) | number}}</span></ion-label>
+          <ion-checkbox slot="start" [(ngModel)]='table.bills[this.selectedBillIndex].itbis'></ion-checkbox>
+          <ion-label>ITBIS <span>{{billService.getItbis(table.bills[this.selectedBillIndex]) | number}}</span></ion-label>
         </ion-item>
       </ion-list>
       <ion-list lines='full'>
-        <ion-item color='primary' class='total'>
-          <ion-button (click)='deleteBill()' style='margin-right:10px;'><ion-icon name="trash"></ion-icon></ion-button>
-          <ion-label>TOTAL <span class='nb'>{{billService.getTotal(table.bills[this.currentBillIndex]) | number}}</span></ion-label>
+        <ion-item (click)='printBill()'color='primary' class='total'>
+          <ion-button (click)='deleteBill();$event.stopPropagation();' style='margin-right:10px;'><ion-icon name="trash"></ion-icon></ion-button>
+          <ion-label>TOTAL <span class='nb'>{{billService.getTotal(table.bills[this.selectedBillIndex]) | number}}</span></ion-label>
         </ion-item>
       </ion-list>
     </div>
@@ -138,3 +204,9 @@
     </div>
   </div>
 </ion-content>
+
+<ion-footer [hidden]='selectedBillIndex != -1' color='success' style='text-align:center'>
+  <ion-button (click)='addBill()' expand='full'>
+    <ion-icon slot='icon-only' size='large' name="add-circle-outline"></ion-icon>
+  </ion-button>
+</ion-footer>
