--- a/src/app/pages/restaurant/restaurant.page.html
+++ b/src/app/pages/restaurant/restaurant.page.html
@@ -58,10 +58,10 @@
         </div>
       </div>
       <div class='llevar'>
-        <ion-button>Bar</ion-button>
-        <ion-button>Komida</ion-button>
-        <ion-button>Fito</ion-button>
-        <ion-button>Para llevar</ion-button>
+        <ion-button [color]='getTableColor(30)' (click)='openTable(30)'>Bar</ion-button>
+        <ion-button [color]='getTableColor(31)' (click)='openTable(31)'>Komida</ion-button>
+        <ion-button [color]='getTableColor(32)' (click)='openTable(32)'>Fito</ion-button>
+        <ion-button [color]='getTableColor(33)' (click)='openTable(33)'>Para llevar</ion-button>
         <ion-button>Pizza 20'</ion-button>
         <ion-button>Cocina 30'</ion-button>
       </div>
