--- a/src/app/pages/table/table.page.scss
+++ b/src/app/pages/table/table.page.scss
@@ -34,6 +34,8 @@ ion-content {
 }
 
 .bill-name {
+  padding-left: 40px;
+  padding-right: 40px;
   width: 278px;
   position: relative;
   text-align: center;
