--- a/src/app/pages/orders/orders.page.html
+++ b/src/app/pages/orders/orders.page.html
@@ -5,19 +5,19 @@
     </ion-buttons>
     <ion-title>Pedidos</ion-title>
     <ion-buttons slot="end">
-      <ion-button>Pedidos hechos</ion-button>
+      <ion-button color='success' (click)='toggleHistory()'>Pedidos listos</ion-button>
     </ion-buttons>
   </ion-toolbar>
 </ion-header>
 <ion-content *ngIf='menu && orders'>
   <div class='orders'>
-    <ion-card *ngFor='let order of orders;' (click)='select(order)' color='{{getOrderColor(order)}}' [hidden]='isPreparing && order.st != OrderStateEnum["selected"]'>
+    <ion-card *ngFor='let order of orders;' (click)='select(order)' [class.dark]='order.state == OrderStateEnum["selected"]' [class.primary]='order.state == OrderStateEnum["preparing"]' [class.success]='order.state == OrderStateEnum["ready"]'>
       <ion-card-header>
-        <ion-card-subtitle>{{order.wn}}</ion-card-subtitle>
-        <ion-card-title>{{order.n}}</ion-card-title>
+        <ion-card-subtitle style='text-transform: initial;'>{{order.waiterName}} - {{order.readyIn}}min</ion-card-subtitle>
+        <ion-card-title>{{order.name}}</ion-card-title>
       </ion-card-header>
-      <ion-card-content (click)='$event.stopPropagation()'>
-        <div *ngFor='let article of order.as; let i = index' class='article'>
+      <ion-card-content>
+        <div *ngFor='let article of order.articles; let i = index' class='article'>
           <div class='quantity'>{{ article.q }}</div>
           <div>
             {{ menu.articles[article.ami].name}}
@@ -38,12 +38,12 @@
             </div>
           </div>
         </div>
-        <div *ngIf='order.kas && order.kas.length'>
-          <ion-item-divider color='medium' class='ion-text-center' (click)='order.kaso = !order.kaso'>
+        <div *ngIf='order.otherArticles && order.otherArticles.length'>
+          <ion-item-divider color='medium' class='ion-text-center' (click)='order.otherArticlesOpened = !order.otherArticlesOpened'>
             <ion-label>{{user?.device.slug == "pizza" ? 'Cocina' : 'Pizza'}}</ion-label>
           </ion-item-divider>
-          <div [hidden]='!order.kaso'>
-            <div *ngFor='let article of order.kas; let i = index' class='article'>
+          <div [hidden]='!order.otherArticlesOpened'>
+            <div *ngFor='let article of order.otherArticles; let i = index' class='article'>
               <div class='quantity'>{{ article.q }}</div>
               <div>{{menu.articles[article.ami].name}}</div>
             </div>
@@ -53,10 +53,23 @@
     </ion-card>
   </div>
 </ion-content>
-<ion-footer>
-  <ion-button [hidden]='isPreparing' color='primary' expand='full' (click)='prepareOrders()'>OK</ion-button>
-  <div [hidden]='!isPreparing' class='flex'>
-    <ion-button class='flex-1' color='primary' expand='full' (click)='isPreparing = false'>Ver pedidos</ion-button>
-    <ion-button class='flex-1' color='dark' expand='full' (click)='itsReady()'>Listo</ion-button>
+<ion-footer [hidden]='isShowingHistory'>
+  <div class='flex'>
+    <div style='width:50%'>
+      <ion-button [hidden]='isPreparing' color='primary' expand='full' (click)='prepareOrders()'>Preparar</ion-button>
+    </div>
+    <div style='width:50%'>
+      <ion-button [hidden]='!isPreparing' color='success' expand='full' (click)='itsReady()'>Listo</ion-button>
+    </div>
+  </div>
+</ion-footer>
+<ion-footer *ngIf='isShowingHistory'>
+  <div class='flex'>
+    <div style='width:50%'>
+      <ion-button [hidden]='!history[historyIndex-1]' color='success' expand='full' (click)='historyFront()'><ion-icon name="arrow-back-circle-outline"></ion-icon></ion-button>
+    </div>
+    <div style='width:50%'>
+      <ion-button [hidden]='!history[historyIndex+1]' color='success' expand='full' (click)='historyBack()'><ion-icon name="arrow-forward-circle-outline"></ion-icon></ion-button>
+    </div>
   </div>
 </ion-footer>
