--- a/src/app/pages/restaurant/restaurant.page.html
+++ b/src/app/pages/restaurant/restaurant.page.html
@@ -62,8 +62,7 @@
         <ion-button [color]='getTableColor(31)' (click)='openTable(31)'>Komida</ion-button>
         <ion-button [color]='getTableColor(32)' (click)='openTable(32)'>Fito</ion-button>
         <ion-button [color]='getTableColor(33)' (click)='openTable(33)'>Para llevar</ion-button>
-        <ion-button>Pizza 20'</ion-button>
-        <ion-button>Cocina 30'</ion-button>
+        <ion-button (click)='openOverview()'>Pedidos en curso</ion-button>
       </div>
     </div>
     <div class='extra-tables'>
