--- a/src/app/pages/table/table.page.html
+++ b/src/app/pages/table/table.page.html
@@ -181,8 +181,12 @@
             </ion-item-divider>
             <div class='category' *ngIf="category.articleIndexes.length / 2 as stop">
               <ion-list lines='full'>
+                <ion-button (click)='addArticleIndex(3)' (dblclick)='addArticleIndex(1)'>
+                  <label>Test</label>
+                  <label slot='end'>70</label>
+                </ion-button>
                 <ng-container *ngFor='let articleIndex of category.articleIndexes; let i = index;'>
-                  <ion-item class='click-effect' (click)='addArticleIndex(articleIndex)' *ngIf='i < stop'>
+                  <ion-item tappable class='click-effect' (click)='addArticleIndex(articleIndex)' *ngIf='i < stop'>
                     <label>{{menu.articles[articleIndex].name}}</label>
                     <label slot='end'>{{menu.articles[articleIndex].price}}</label>
                   </ion-item>
@@ -190,7 +194,7 @@
               </ion-list>
               <ion-list lines='full'>
                 <ng-container *ngFor='let articleIndex of category.articleIndexes; let i = index;'>
-                  <ion-item class='click-effect' (click)='addArticleIndex(articleIndex)' *ngIf='i >= stop'>
+                  <ion-item tappable class='click-effect' (click)='addArticleIndex(articleIndex)' *ngIf='i >= stop'>
                     <label>{{menu.articles[articleIndex].name}}</label>
                     <label slot='end'>{{menu.articles[articleIndex].price}}</label>
                   </ion-item>
