--- a/src/helpers.scss
+++ b/src/helpers.scss
@@ -6,9 +6,9 @@
   height: 100%!important;
 }
 
-.click-effect:active {
-  --ion-background-color: #e9e9e9!important;
-  background-color: #e9e9e9!important;
+.click-effect:active, .click-effect:hover  {
+  --ion-background-color: #b6b6b6!important;
+  background-color: #b6b6b6!important;
 }
 
 .flex-1 {
